tests/fixtures/errors/e0414_array_element_width_mismatch.mimz
// expect: E0414
fn f(vals: bits[8][2]) -> bits[8] {
  vals[0]
}
module M {
  out o: bits[8]
  o = f([1, extend(1, 16)])
}
